# openstack-toolbox

./: .dockerignore  .env.example  .gitignore  Dockerfile  MANIFEST.in  README-DOCKER.md  README.md  docker-compose.yml  fetch_billing.py  fetch_billing.sh  fetch_uses.py  notification.py  openstack_optimization.py  openstack_optimization_report.txt  openstack_script.py  openstack_summary.py  pyproject.toml  report_project.py  weekly_billing.py  weekly_notification_optimization.py  weekly_uses.py
.github/workflows/: README.md  build.yml
docker/: CRON-EXAMPLES.md  crontab  entrypoint.sh  prometheus.yml.example  test-container.sh
scripts/: openstack-summary  openstack-toolbox
src/: config.py  exceptions.py  fetch_billing.py  logger.py  openstack-summary.py  openstack-toolbox.py  openstack-toolbox.sh  openstack_admin.py  openstack_admin_script.py  openstack_metrics_collector.py  openstack_optimization.py  openstack_script.py  openstack_summary.py  openstack_toolbox.py  security.py  utils.py  weekly-notification.sh  weekly_notification_optimization.py
