[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openstack-toolbox"
version = "1.7.0"
description = "A toolbox for OpenStack - Docker deployment with automated monitoring and cron tasks"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

dependencies = [
  "openstacksdk",
  "python-dotenv",
  "rich",
  "tomli",
  "prometheus-client",
  "python-json-logger",
  "requests",
  "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/ClaraVnk/openstack-toolbox"
Issues = "https://github.com/ClaraVnk/openstack-toolbox/issues"
Documentation = "https://github.com/ClaraVnk/openstack-toolbox#readme"

[project.scripts]
openstack-summary = "src.openstack_summary:main"
openstack-optimization = "src.openstack_optimization:main"
openstack-admin = "src.openstack_admin:main"
openstack-toolbox = "src.openstack_toolbox:main"
weekly-notification = "src.weekly_notification_optimization:main"
openstack-metrics-collector = "src.openstack_metrics_collector:main"

[tool.setuptools]
packages = ["src"]